@@ -7,28 +7,13 @@
 package com.evolveum.midpoint.integration.catalog.service;
 
 import com.evolveum.midpoint.integration.catalog.configuration.CatalogProperties;
-import com.evolveum.midpoint.integration.catalog.object.Application;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationApplicationTag;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationOrigin;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationTag;
-import com.evolveum.midpoint.integration.catalog.object.Capability;
-import com.evolveum.midpoint.integration.catalog.object.CountryOfOrigin;
-import com.evolveum.midpoint.integration.catalog.object.ConnVersionCapability;
-import com.evolveum.midpoint.integration.catalog.object.Connector;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorBundle;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorBundleVersion;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorVersion;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethod;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodCapability;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodConnector;
-import com.evolveum.midpoint.integration.catalog.object.OwnedItem;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodType;
-import com.evolveum.midpoint.integration.catalog.object.LifecycleType;
-import com.evolveum.midpoint.integration.catalog.object.MidpointVersion;
+import com.evolveum.midpoint.integration.catalog.object.*;
 import com.evolveum.midpoint.integration.catalog.repository.MidpointVersionRepository;
 
+import com.evolveum.midpoint.integration.catalog.service.event.BuildFinishedEvent;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -82,10 +67,9 @@ public class SupportTicketDescriptionBuilder {
             APPLICATION_PUBLISHED_NOTE, CONNECTOR_PUBLISHED_NOTE, FILES_NOTE);
 
     private final MidpointVersionRepository midpointVersionRepository;
-    private final CatalogContactResolver contactResolver;
     private final TutorialStorageService tutorialStorageService;
     private final CatalogProperties catalogProperties;
-    private final OrganizationService organizationService;
+    private final OwnershipService ownershipService;
 
     /** The submission as markdown, ready to be posted as the work package description. */
     public String build(IntegrationMethod method) {
@@ -99,6 +83,32 @@ public class SupportTicketDescriptionBuilder {
         appendConnectors(body, method);
 
         body.append('\n').append(CLOSING_NOTE).append('\n');
+        return body.toString();
+    }
+
+    /**
+     * The outcome of a build as markdown, for a comment on the work package of the revision it
+     * belongs to. A failed build leads with the error, which is the whole of what a reviewer needs;
+     * a successful one names what came out of it, so the artifact can be checked without leaving
+     * the portal.
+     */
+    public String buildBuildOutcome(BuildFinishedEvent event) {
+        StringBuilder body = new StringBuilder();
+        if (!event.succeeded()) {
+            body.append("## Build failed\n\n");
+            body.append(StringUtils.isBlank(event.errorMessage())
+                    ? "The build reported no error message.\n"
+                    : "```\n" + event.errorMessage().strip() + "\n```\n");
+            return body.toString();
+        }
+
+        body.append("## Build succeeded\n\n");
+        bullet(body, "Bundle", event.bundleName());
+        bullet(body, "Version", event.bundleVersion());
+        bullet(body, "Connector classes", event.connectorClasses() == null || event.connectorClasses().isEmpty()
+                ? null
+                : String.join(", ", event.connectorClasses()));
+        bullet(body, "Artifact", event.artifactUrl());
         return body.toString();
     }
 
@@ -198,7 +208,7 @@ public class SupportTicketDescriptionBuilder {
         bullet(body, "Description", singleLine(method.getDescription()));
         bullet(body, "Integration method type", integrationMethodTypes(method));
         bullet(body, "Supported midPoint version", midpointVersionRange(method));
-        bullet(body, "Author", method.getAuthor() != null ? withEmail(method, method.getAuthor()) : "unknown");
+        bullet(body, "Author", method.getAuthor() != null ? authorWithEmail(method.getAuthor()) : "unknown");
         bullet(body, "Maintainer", maintainer(method));
         bullet(body, "Submitted", timestamp(method.getCreatedAt()));
         appendCatalogLink(body, method, method.getApplication());
@@ -218,32 +228,20 @@ public class SupportTicketDescriptionBuilder {
     }
 
     /**
-     * A name with its address and organization where those are known: {@code u1 (u1@acme.com), Acme co.}
-     * Each part is optional, so a bare name is a normal result - see {@link CatalogContactResolver};
-     * {@code item} is the row the name is stamped on, which is where both parts come from.
+     * The author with their address where one is recorded: {@code u1 (u1@acme.com)}. A bare name
+     * is a normal result - the address is optional on the row.
      */
-    private String withEmail(OwnedItem item, String name) {
-        if (name == null || name.isBlank()) {
+    private String authorWithEmail(Author author) {
+        if (author == null || StringUtils.isBlank(author.getUsername())) {
             return null;
         }
-        String labelled = contactResolver.emailOf(item, name)
-                .map(email -> name + " (" + email + ")")
-                .orElse(name);
-        return contactResolver.organizationOf(item, name)
-                .map(organization -> labelled + ", " + organization)
-                .orElse(labelled);
+        return author.getUsername() +
+                (StringUtils.isNotBlank(author.getEmail()) ? (" (" + author.getEmail() + ")") : "");
     }
 
-    /**
-     * The maintainer as the ticket names them: the maintaining person with their contact details,
-     * or just the name of the maintaining organization. Needed because an organization maintainer
-     * is recorded with no username, which reading the username alone would report as unmaintained.
-     */
-    private String maintainer(OwnedItem item) {
-        String name = item.getMaintainer();
-        return name != null && !name.isBlank()
-                ? withEmail(item, name)
-                : organizationService.displayName(item.getMaintainerOrgId());
+    /** The maintainer as the ticket names them, whichever category it is. */
+    private String maintainer(GetOwnershipOneMaintainer item) {
+        return ownershipService.maintainerLabel(item);
     }
 
     private String integrationMethodTypes(IntegrationMethod method) {
@@ -471,7 +469,7 @@ public class SupportTicketDescriptionBuilder {
         bullet(body, "Description", singleLine(connector.getDescription()));
         bullet(body, "Connector versions (from - to)", versionRange(link));
         bullet(body, "Connector version", submittedVersion(connector));
-        bullet(body, "Author", withEmail(connector, connector.getAuthor()));
+        bullet(body, "Author", authorWithEmail(connector.getAuthor()));
         bullet(body, "Maintainer", maintainer(connector));
         bullet(body, "Fully qualified class name", connector.getFullyQualifiedClassName());
         bullet(body, "Created", timestamp(connector.getCreatedAt()));
@@ -512,7 +510,7 @@ public class SupportTicketDescriptionBuilder {
                         .toList();
         for (ConnectorVersion version : versions) {
             body.append("\n## Connector version ").append(blankToDash(version.getRevision())).append("\n\n");
-            bullet(body, "Author", withEmail(version, version.getAuthor()));
+            bullet(body, "Author", authorWithEmail(version.getAuthor()));
             bullet(body, "Maintainer", maintainer(version));
             bullet(body, "Created", timestamp(version.getCreatedAt()));
             appendBundleVersion(body, version.getConnectorBundleVersion());
